fixed player walk animation on mobile

--- a/src/style.sass
+++ b/src/style.sass
@@ -23,13 +23,13 @@ $low-hex-color: rgb(77, 210, 199)
 
 @keyframes jump
     10%
-        transform: rotateX(35deg) scaleY(0.8)
+        transform: scaleY(0.8)
     50%
-        transform: rotateX(35deg) translateY(-0.3rem) scaleY(1.2)
+        transform: translateY(-0.3rem) scaleY(1.2)
     80%
-        transform: rotateX(35deg) translateY(0rem) scaleY( 0.9)
+        transform: translateY(0rem) scaleY( 0.9)
     100%
-        transform: rotateX(35deg) translateY(0rem) scaleY(1)
+        transform: translateY(0rem) scaleY(1)
 
 body
     background: #fffedf
@@ -59,11 +59,11 @@ svg
         transform: rotateX(35deg)
         font-size: 0.6rem
         text-anchor: middle
-    &.moving .player-icon
+    &.moving .player-animation
         animation: jump var(--player-move-duration) ease
 
 .highlight
-    transition: transform 250ms cubic-bezier(0.34, 1.56, 0.64, 1)
+    transition: transform 200ms ease-out
 
 @mixin hex($color)
     .face
